# Psychohistory

./: .gitignore  AGENTS.md  Cargo.toml  DUAL_SYSTEM_DESIGN.md  LICENSE.md  README.md  TODO-govtype.md  TODO.md  WORLD_MODEL_TODO.md  build.rs  cargo.toml  future_roadmap.md  refactor.diff  shape.json  tree.txt
.github/prompts/: arch-direction.prompt
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: cli_args.rs  csv_export.rs  logging.rs  main.rs  result_output.rs  scenario.rs  util.rs
core/: Cargo.toml
core/src/: app.rs  config.rs  corruption_system.rs  economic_outcome_system.rs  entities.rs  example_social.rs  experiment.rs  legal.rs  lib.rs  logging.rs  plugin.rs  public_trust_system.rs  run_result.rs  scheduler.rs  seed_util.rs  simulation.rs  state.rs  system.rs  time.rs
core/src/legal/: autocracy.rs  democracy.rs  mod.rs  monarchy.rs  other.rs
core/tests/: config_validation.rs  json_validation.rs
lab/src/: lib.rs
models/: Cargo.toml
models/src/: lib.rs
plugins/demog/: Cargo.toml
plugins/demog/src/: lib.rs  plugin.rs  state.rs  system.rs
plugins/econ/: Cargo.toml
plugins/econ/src/: lib.rs  plugin.rs  state.rs  system.rs
plugins/gov/: Cargo.toml
plugins/gov/src/: lib.rs  plugin.rs  state.rs  system.rs
psychohistory-cli/: Cargo.toml
psychohistory-cli/src/: main.rs  util.rs
psychohistory-core/: Cargo.toml
psychohistory-core/src/: app.rs  lib.rs  plugin.rs  scheduler.rs  state.rs  system.rs  time.rs
psychohistory-demog/: Cargo.toml
psychohistory-econ/: Cargo.toml
psychohistory-econ/src/: lib.rs  plugin.rs  system.rs
psychohistory-gov/: Cargo.toml
psychohistory-gov/src/: lib.rs  plugin.rs  state.rs  system.rs
psychohistory-lab/: Cargo.toml
psychohistory-models/: Cargo.toml
scenarios/: countries.json  simulation_config.json  world_state.json
sdk/: Cargo.toml
sdk/src/: components.rs  influence.rs  lib.rs
tests/: json_validation.rs
