[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
num-format = "0.4.4"
rust_decimal = "1.42.0"
rust_decimal_macros = "1.40.0"
sdk = { path = "../sdk" }
psychohistory_core = { package = "core", path = "../core" }
econ = { path = "../plugins/econ" }
gov = { path = "../plugins/gov" }
demog = { path = "../plugins/demog" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
models = { path = "../models" }
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4"

