[package]
name = "core"
version = "0.1.0"
edition = "2024"

[dependencies]
models = { workspace = true }
sdk = { workspace = true }
indicatif = "0.18.4"
rayon = "1.12.0"
serde = { version = "1.0", features = ["derive"] }
rand = { version = "0.10.1", features = ["std"] }
rand_distr = "0.6.0"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
flexi_logger = "0.31.8"
log = "0.4"
serde_json = "1.0"
ndarray = "0.17.2"
ndarray-stats = "0.7.0"
legion = "0.4.0"

[dev-dependencies]
serde_json = "1.0"
